# microsim

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  INSTALL.md  LICENSE.md  Pipfile  README.md  baselineHazardTVC.dta  output.txt  pyproject.toml  repodata.json  repodata.json.bz2  resultsFromParameterRun.p  resultsFromParameterRunQuad.p
mcm/: alcohol_category.py  ascvd_outcome_model.py  cohort_risk_model_repository.py  cox_regression_model.py  cv_outcome_determination.py  data_loader.py  education.py  gcp_model.py  gcp_model_with_bp_treatment.py  gender.py  linear_risk_factor_model.py  log_linear_risk_factor_model.py  model_argument_transform.py  nhanes2015-2016Combined.dta  nhanes_linear_risk_factor_model.py  nhanes_risk_model_repository.py  outcome.py  outcome_model_repository.py  outcome_model_type.py  outcome_type.py  person.py  population.py  regression_model.py  risk_model_repository.py  smoking_status.py  stats_model_linear_probability_risk_factor_model.py  stats_model_rounded_linear_risk_factor_model.py  statsmodel_cox_model.py  statsmodel_linear_risk_factor_model.py  statsmodel_logistic_risk_factor_model.py
microsim/: __init__.py  afib_model.py  age_model.py  alcohol_model.py  ascvd_outcome_model.py  bp_treatment_recalibration.py  bp_treatment_strategies.py  ci_model.py  ci_model_repository.py  cognition_model_repository.py  cognition_outcome.py  cohort_risk_model_repository.py  cox_regression_model.py  cv_model.py  cv_model_repository.py  cv_outcome_determination.py  data_loader.py  death_model.py  death_model_repository.py  dementia_model.py  dementia_model_gompertz.py  dementia_model_repository.py  dementia_model_weibull.py  education_model.py  epilepsy_model.py  epilepsy_model_repository.py  gcp_model.py  gcp_model_repository.py  gcp_model_with_bp_treatment.py  gcp_outcome.py  gcp_stroke_model.py  gfr_equation.py  initialization_repository.py  log_linear_risk_factor_model.py  mi_partition_model.py  mi_partition_model_repository.py  modality.py  modality_model.py  (+51 more)
(+165 files in other folders)
