[tool.poetry]
name = "mcm"
version = "0.0.1"
description = "Open-source cardiovascular and cognition simulation framework for population health"
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
pandas = "^0.24.2"
statsmodels = "^0.10.0"
scipy = "^1.3"
test = "^2.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
autopep8 = "^1.4.4"
ipython = "^7.7.0"

[tool.poetry.scripts]
test = "scripts.test:main"
lint = "scripts.lint:main"
format = "scripts.format:main"
format-diff = "scripts.format:diffmain"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
