[tool.poetry]
name = "microsim"
version = "0.0.1"
description = "Open-source chronic disease simulation framework for population health"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
pandas = "^0.24.2"
statsmodels = "^0.10.0"
scipy = "^1.3"
pandarallel = "^1.5.1"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
ipython = "^7.7.0"
black = "^21.5b2"

[tool.poetry.scripts]
test = "scripts.test:main"
lint = "scripts.lint:main"
format = "scripts.format:main"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
