[tool.poetry]
name = "microsim"
version = "0.0.1"
description = "Open-source chronic disease simulation framework for population health"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.16"
pandas = "^1.4.2"
statsmodels = "^0.13.2"
scipy = "^1.3"
pandarallel = "^1.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
ipython = "^7.7.0"
black = "^22.3.0"

[tool.poetry.scripts]
test = "scripts.test:main"
lint = "scripts.lint:main"
format = "scripts.format:main"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
